--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.0,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "tilt_rs_py"
+name = "pseudo_tilt"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
