--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -105,15 +105,22 @@ jobs:
           name: wheels
           path: dist
 
-#   release:
-#     name: Release
-#     runs-on: ubuntu-latest
-#     if: "startsWith(github.ref, 'refs/tags/')"
-#     needs: [linux, windows, macos, sdist]
-#     steps:
-#       - uses: actions/download-artifact@v3
-#         with:
-#           name: wheels
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    if: "startsWith(github.ref, 'refs/tags/')"
+    needs: [linux, windows, macos, sdist]
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: wheels
+      - uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          #upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: .
+          asset_name: py_package
 #       - name: Publish to PyPI
 #         uses: PyO3/maturin-action@v1
 #         env:
