--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -103,6 +103,7 @@ jobs:
           path: dist
 
   release:
+    permissions: write-all
     name: Release
     runs-on: ubuntu-latest
     # "startsWith(github.ref, 'refs/tags/')"
