--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -122,6 +122,8 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+      - name: Compress package
+        run: tar -acf pseudo_tilt_py.zip pyproject.toml wheels
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
@@ -129,9 +131,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: .
-          asset_name: py_package
-          #asset_content_type: application/zip
+          asset_path: pseudo_tilt_py.zip
+          asset_name: pseudo_tilt_py.zip
+          asset_content_type: application/zip
 #       - name: Publish to PyPI
 #         uses: PyO3/maturin-action@v1
 #         env:
