--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -109,6 +109,7 @@ jobs:
     # "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, windows, macos, sdist]
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
           name: wheels
