--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -124,7 +124,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Compress package
-        run: tar -acf pseudo_tilt_py.zip pyproject.toml wheels
+        run: tar -acf pseudo_tilt_py.zip pyproject.toml dist/wheels
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
