--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -107,7 +107,8 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     # "startsWith(github.ref, 'refs/tags/')"
-    needs: [linux, windows, macos, sdist]
+    needs: [linux]
+    #, windows, macos, sdist]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
