--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,8 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64, x86, aarch64]
-        #, armv7, s390x, ppc64le]
+        target: [x86_64, x86, aarch64, armv7, s390x, ppc64le]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -41,52 +40,52 @@ jobs:
           name: wheels
           path: dist
 
-#   windows:
-#     runs-on: windows-latest
-#     strategy:
-#       matrix:
-#         target: [x64, x86]
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: actions/setup-python@v4
-#         with:
-#           python-version: '3.10'
-#           architecture: ${{ matrix.target }}
-#       - name: Build wheels
-#         uses: PyO3/maturin-action@v1
-#         with:
-#           target: ${{ matrix.target }}
-#           args: --release --out dist --find-interpreter
-#           sccache: 'true'
-#           rust-toolchain: nightly
-#       - name: Upload wheels
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: wheels
-#           path: dist
+  windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        target: [x64, x86]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          architecture: ${{ matrix.target }}
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          args: --release --out dist --find-interpreter
+          sccache: 'true'
+          rust-toolchain: nightly
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: dist
 
-#   macos:
-#     runs-on: macos-latest
-#     strategy:
-#       matrix:
-#         target: [x86_64, aarch64]
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: actions/setup-python@v4
-#         with:
-#           python-version: '3.10'
-#       - name: Build wheels
-#         uses: PyO3/maturin-action@v1
-#         with:
-#           target: ${{ matrix.target }}
-#           args: --release --out dist --find-interpreter
-#           sccache: 'true'
-#           rust-toolchain: nightly
-#       - name: Upload wheels
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: wheels
-#           path: dist
+  macos:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        target: [x86_64, aarch64]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          args: --release --out dist --find-interpreter
+          sccache: 'true'
+          rust-toolchain: nightly
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: dist
 
   sdist:
     runs-on: ubuntu-latest
@@ -104,52 +103,18 @@ jobs:
           path: dist
 
   release:
-    permissions: write-all
     name: Release
     runs-on: ubuntu-latest
-    # "startsWith(github.ref, 'refs/tags/')"
-    needs: [linux]
-    #, windows, macos, sdist]
+    if: "startsWith(github.ref, 'refs/tags/')"
+    needs: [linux, windows, macos, sdist]
     steps:
-      - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
           name: wheels
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Publish to PyPI
+        uses: PyO3/maturin-action@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-      - name: Compress package
-        run: ls ; tar -acf pseudo_tilt_py.zip *.whl
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: pseudo_tilt_py.zip
-          asset_name: pseudo_tilt_py.zip
-          asset_content_type: application/zip
-      - name: Upload Release Asset 2
-        id: upload-release-asset2
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: "*.whl"
-          asset_content_type: application/zip
-#       - name: Publish to PyPI
-#         uses: PyO3/maturin-action@v1
-#         env:
-#           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-#         with:
-#           command: upload
-#           args: --skip-existing *
+          command: upload
+          args: --skip-existing *
