--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pseudo_tilt"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,5 +9,5 @@ name = "pseudo_tilt"
 crate-type = ["cdylib"]
 
 [dependencies]
-pseudo_tilt = { git = "https://gitlab.com/pseudowalls/tilt.rs.git", tag = "v0.5.0" }
+pseudo_tilt = { git = "https://gitlab.com/pseudowalls/tilt.rs.git", rev = "10545bb4a862646b57b71e0a0af3e2d304a9ff37" }
 pyo3 = { version = "0.20.2", features = ["extension-module"] }
